--- a/source/index.html
+++ b/source/index.html
@@ -42,6 +42,66 @@
     <main class="page-main">
       <h1 class="visually-hidden">Почему стоит выбрать путешествие в Седону</h1>
 
+      <section class="intro">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+        <img class="intro__img" src="https://via.placeholder.com/282x214">
+        <p class="intro__description">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+
+      </section>
+
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Почему стоит выбрать Седону</h2>
+        <p class="advantages__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <ul class="advantages__list">
+            <li class="advantages__item">
+              <h3 class="advantages__title">Настоящий городок</h3>
+              <p>№1</p>
+              <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
+              <img src="https://via.placeholder.com/130x150">
+              <ul class="facilities">
+                <li class="facilities__item">
+                  <h4 class="facilities__title">Жилье</h3>
+                  <img class="facilities__icon" src="#" alt="Жилье" width="75" height="72">
+                  <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </li>
+                <li class="facilities__item">
+                  <h4 class="facilities__title">Сувениры</h3>
+                  <img class="facilities__icon" src="#" alt="Жилье" width="75" height="72">
+                  <p>Не только китайского, но и местного производства!</p>
+                </li>
+                <li class="facilities__item">
+                  <h4 class="facilities__title">Еда</h3>
+                  <img class="facilities__icon" src="#" alt="Жилье" width="75" height="72">
+                  <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+
+              </ul>
+
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__title">Там есть мост дьявола</h3>
+              <p>№2</p>
+              <p>Да, по нему можно пройти, если вы осмелитесь, конечно </p>
+              <img src="https://via.placeholder.com/130x150">
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__title">Небольшая площадь</h3>
+              <p>№3</p>
+              <p>Все интересные места находятся очень близко </p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__title">Красивая дорога</h3>
+              <p>№4</p>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__title">Мало туристов</h3>
+              <p>№5</p>
+              <p>Большинство едет в гранд каньон и толпится там</p>
+            </li>
+          </ul>
+      </section>
     </main>
 
     <footer class="page-footer">
