Исправления базовой разметки.

--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -8,7 +8,7 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo">
+    <a class="page-header__logo" href="index.html">
       <img src="https://via.placeholder.com/125x130">
     </a>
     <nav class="main-nav">
@@ -48,7 +48,7 @@
       <div class="review-intro__cover">
         <img src="https://via.placeholder.com/229x100">
       </div>
-      <div class="photo-album__text">
+      <div class="review-intro__text">
         <h2 class="visually-hidden">Оставьте свой отзыв</h2>
         <p>Помогите нашим отелям стать лучше!
           Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
