--- a/source/photo.html
+++ b/source/photo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -8,7 +8,7 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo">
+    <a class="page-header__logo" href="index.html">
       <img src="https://via.placeholder.com/125x130">
     </a>
     <nav class="main-nav">
@@ -57,42 +57,42 @@
 
   <section class="cards">
     <div class="card">
-      <img class="card__photo" src="https://via.placeholder.com/280x280">
+      <a href="img.jpg">
+        <img class="card__photo" src="https://via.placeholder.com/280x280">
+      </a>
       <h3 class="card__title">Неродные просторы</h3>
-      <span class="card__author">Автор фото:</span>
-      <span class="card__author-name">Борис</span>
+      <span class="card__author-name">Автор фото:Борис</span>
       <div class="card__review">
-        <img class="card__like" src="https://via.placeholder.com/40x40">
         <p class="card__like-count">1350</p>
       </div>
     </div>
     <div class="card">
-      <img class="card__photo" src="https://via.placeholder.com/280x280">
+      <a href="img.jpg">
+        <img class="card__photo" src="https://via.placeholder.com/280x280">
+      </a>
       <h3 class="card__title">Местная растительность</h3>
-      <span class="card__author">Автор фото:</span>
-      <span class="card__author-name">Сергей</span>
+      <span class="card__author-name">Автор фото:Сергей</span>
       <div class="card__review">
-        <img class="card__like" src="https://via.placeholder.com/40x40">
         <p class="card__like-count">143</p>
       </div>
     </div>
     <div class="card">
-      <img class="card__photo" src="https://via.placeholder.com/280x280">
+      <a href="img.jpg">
+        <img class="card__photo" src="https://via.placeholder.com/280x280">
+      </a>
       <h3 class="card__title">Дорога на север</h3>
-      <span class="card__author">Автор фото:</span>
-      <span class="card__author-name">Петр</span>
+      <span class="card__author-name">Автор фото:Петр</span>
       <div class="card__review">
-        <img class="card__like" src="https://via.placeholder.com/40x40">
         <p class="card__like-count">96</p>
       </div>
     </div>
     <div class="card">
-      <img class="card__photo" src="https://via.placeholder.com/280x280">
+      <a href="img.jpg">
+        <img class="card__photo" src="https://via.placeholder.com/280x280">
+      </a>
       <h3 class="card__title">Мост дьявола</h3>
-      <span class="card__author">Автор фото:</span>
-      <span class="card__author-name">Антон</span>
+      <span class="card__author-name">Автор фото:Антон</span>
       <div class="card__review">
-        <img class="card__like" src="https://via.placeholder.com/40x40">
         <p class="card__like-count">254</p>
       </div>
     </div>
