--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -47,13 +47,12 @@
     <section class="intro">
       <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
       <img class="intro__img" src="https://via.placeholder.com/282x214">
-      <p class="intro__description">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
-
     </section>
 
 
     <section class="advantages">
       <h2 class="visually-hidden">Почему стоит выбрать Седону</h2>
+      <p class="advantages__description">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="advantages__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       <ul class="advantages__list">
         <li class="advantages__item">
@@ -64,17 +63,14 @@
           <ul class="facilities">
             <li class="facilities__item">
               <h4 class="facilities__title">Жилье</h3>
-                <img class="facilities__icon" src="#" alt="Жилье" width="75" height="72">
                 <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
             <li class="facilities__item">
               <h4 class="facilities__title">Сувениры</h3>
-                <img class="facilities__icon" src="#" alt="Жилье" width="75" height="72">
                 <p>Не только китайского, но и местного производства!</p>
             </li>
             <li class="facilities__item">
               <h4 class="facilities__title">Еда</h3>
-                <img class="facilities__icon" src="#" alt="Жилье" width="75" height="72">
                 <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
 
