--- a/source/index.html
+++ b/source/index.html
@@ -100,6 +100,29 @@
         </li>
       </ul>
     </section>
+
+    <section class="search-section">
+      <h2 class="visually-hidden">Бронирование гостиницы</h2>
+      <p class="search-section__subject">Заинтересовались?</p>
+      <p class="search-section__text">Укажите предполагаемые даты поездки, и мы покажем вам
+        лучшие предложения гостиниц в Cедоне</p>
+      <!-- При нажатии на кнопку поиска должен осуществляться переход на отдельную страницу -->
+      <form class="search-section__form" action="#" target="_blank">
+        <button class="search-section__button" type="button" aria-label="Открыть форму поиска гостиницы в Седоне">Найти
+          гостиницу</button>
+      </form>
+    </section>
+
+    <section class="map">
+      <p>
+        <map name="navigation">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3381003.256085881!2d-114.17823951985389!3d34.15245640453722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b08ebcb4c186b%3A0x423927b17fc1cd71!2z0JDRgNC40LfQvtC90LAsINCh0KjQkA!5e0!3m2!1sru!2scz!4v1595419092166!5m2!1sru!2scz"
+            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0"></iframe>
+        </map>
+      </p>
+    </section>
   </main>
 
   <footer class="page-footer">
