--- a/source/photo.html
+++ b/source/photo.html
@@ -41,64 +41,73 @@
     </nav>
   </header>
 
-  <main class="page-main"></main>
-  <h1 class="visually-hidden">Фото и видео Седоны</h1>
+  <main class="page-main">
+    <h1 class="visually-hidden">Фото и видео Седоны</h1>
 
-  <section class="photo-album">
-    <div class="photo-album__cover">
-      <img src="https://via.placeholder.com/229x100">
-    </div>
-    <div class="photo-album__text">
-      <h2 class="visually-hidden">Фото и видео</h2>
-      <p>Не можете решиться на путешествие из-за курса?
-        Фотографии помогут вам забыть о политике и экономике</p>
-    </div>
-  </section>
+    <section class="photo-album">
+      <div class="photo-album__cover">
+        <img src="https://via.placeholder.com/229x100">
+      </div>
+      <div class="photo-album__text">
+        <h2 class="visually-hidden">Фото и видео</h2>
+        <p>Не можете решиться на путешествие из-за курса?
+          Фотографии помогут вам забыть о политике и экономике</p>
+      </div>
+    </section>
 
-  <section class="cards">
-    <div class="card">
-      <a href="img.jpg">
-        <img class="card__photo" src="https://via.placeholder.com/280x280">
-      </a>
-      <h3 class="card__title">Неродные просторы</h3>
-      <span class="card__author-name">Автор фото:Борис</span>
-      <div class="card__review">
-        <p class="card__like-count">1350</p>
+    <section class="cards">
+      <div class="card">
+        <a href="img.jpg">
+          <img class="card__photo" src="https://via.placeholder.com/280x280">
+        </a>
+        <h3 class="card__title">Неродные просторы</h3>
+        <span class="card__author-name">Автор фото:Борис</span>
+        <div class="card__review">
+          <p class="card__like-count">1350</p>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <a href="img.jpg">
-        <img class="card__photo" src="https://via.placeholder.com/280x280">
-      </a>
-      <h3 class="card__title">Местная растительность</h3>
-      <span class="card__author-name">Автор фото:Сергей</span>
-      <div class="card__review">
-        <p class="card__like-count">143</p>
+      <div class="card">
+        <a href="img.jpg">
+          <img class="card__photo" src="https://via.placeholder.com/280x280">
+        </a>
+        <h3 class="card__title">Местная растительность</h3>
+        <span class="card__author-name">Автор фото:Сергей</span>
+        <div class="card__review">
+          <p class="card__like-count">143</p>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <a href="img.jpg">
-        <img class="card__photo" src="https://via.placeholder.com/280x280">
-      </a>
-      <h3 class="card__title">Дорога на север</h3>
-      <span class="card__author-name">Автор фото:Петр</span>
-      <div class="card__review">
-        <p class="card__like-count">96</p>
+      <div class="card">
+        <a href="img.jpg">
+          <img class="card__photo" src="https://via.placeholder.com/280x280">
+        </a>
+        <h3 class="card__title">Дорога на север</h3>
+        <span class="card__author-name">Автор фото:Петр</span>
+        <div class="card__review">
+          <p class="card__like-count">96</p>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <a href="img.jpg">
-        <img class="card__photo" src="https://via.placeholder.com/280x280">
-      </a>
-      <h3 class="card__title">Мост дьявола</h3>
-      <span class="card__author-name">Автор фото:Антон</span>
-      <div class="card__review">
-        <p class="card__like-count">254</p>
+      <div class="card">
+        <a href="img.jpg">
+          <img class="card__photo" src="https://via.placeholder.com/280x280">
+        </a>
+        <h3 class="card__title">Мост дьявола</h3>
+        <span class="card__author-name">Автор фото:Антон</span>
+        <div class="card__review">
+          <p class="card__like-count">254</p>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
+    <section class="intro-video">
+      <h2 class="visually-hidden">Промо-ролик</h2>
+      <p class="intro-video__title">Все еще сомневаетесь?</p>
+      <p class="intro-video__text">Смотрите видеопрезентацию и скорее за билетами,
+        пока они не подорожали в очередной раз!</p>
+      <video>
+      </video>
+    </section>
 
+  </main>
   <footer class="page-footer">
     <div class="page-footer__hashtag hashtag">
       <p class="hashtag__text">#Visitsedona</p>
