Внесены исправления для разметки страниц index.html и form.htm.

--- a/source/index.html
+++ b/source/index.html
@@ -106,11 +106,7 @@
       <p class="search-section__subject">Заинтересовались?</p>
       <p class="search-section__text">Укажите предполагаемые даты поездки, и мы покажем вам
         лучшие предложения гостиниц в Cедоне</p>
-      <!-- При нажатии на кнопку поиска должен осуществляться переход на отдельную страницу -->
-      <form class="search-section__form" action="#" target="_blank">
-        <button class="search-section__button" type="button" aria-label="Открыть форму поиска гостиницы в Седоне">Найти
-          гостиницу</button>
-      </form>
+      <a class="search-section__link" href="#">Найти гостиницу</a>
     </section>
 
     <section class="map">
