Выполнена базовая верстка.

--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body class="page__body">
@@ -138,3 +139,6 @@
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
+</body>
+
+</html>
