Исправления базовой верстки.

--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 <body class="page__body">
   <header class="page-header">
     <a class="page-header__logo">
-      <img src="img/logo-sedona-mobile.svg">
+      <img src="img/logo-sedona-mobile.svg" alt="Логотип Седона">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
@@ -47,70 +47,63 @@
 
     <section class="intro">
       <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-      <img class="intro__img" src="img/text-sedona-index.svg">
+      <img class="intro__img" src="img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
     </section>
 
 
     <section class="advantages">
       <h2 class="visually-hidden">Почему стоит выбрать Седону</h2>
-
-      <div class="advantages__intro inscription">
+      <div class="inscription advantages__intro">
         <p class="inscription__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="inscription__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       </div>
-
       <ul class="advantages__list">
-
-        <li class="advantages__item city-item">
+        <li class="city-item advantages__item">
           <div class="city-item__description">
             <h3 class="city-item__title">Настоящий городок</h3>
             <p>№1</p>
             <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <img class="city-item__photo" src="img/main-city-mobile@1x.jpg" alt="Изображение города">
           </div>
         </li>
-
-
-        <img src="img/main-city-mobile@1x.jpg">
-
-        <ul class="city-item__facilities facilities">
+        <ul class="facilities city-item__facilities">
           <li class="facilities__item">
-            <h4 class="facilities__title">Жилье</h3>
-              <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            <h3 class="facilities__title">Жилье</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
           <li class="facilities__item">
-            <h4 class="facilities__title">Сувениры</h3>
-              <p>Не только китайского, но и местного производства!</p>
+            <h3 class="facilities__title">Сувениры</h3>
+            <p>Не только китайского, но и местного производства!</p>
           </li>
           <li class="facilities__item">
-            <h4 class="facilities__title">Еда</h3>
-              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            <h3 class="facilities__title">Еда</h3>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
 
         </ul>
 
-
-        <li class="advantages__item bridge-item">
+        <li class="bridge-item advantages__item">
           <div class="bridge-item__description">
             <h3 class="bridge-item__title">Там есть мост дьявола</h3>
             <p>№2</p>
             <p>Да, по нему можно пройти, если вы осмелитесь, конечно </p>
           </div>
-          <img src="img/photo-bridge-mobile@1x.jpg">
+          <img class="bridge-item__photo" src="img/photo-bridge-mobile@1x.jpg" alt="Мост Дьявола">
         </li>
 
-        <li class="advantages__item square-item">
+        <li class="square-item advantages__item">
           <h3 class="advantages__title">Небольшая площадь</h3>
           <p>№3</p>
           <p>Все интересные места находятся очень близко </p>
         </li>
 
-        <li class="advantages__item road-item">
+        <li class="road-item advantages__item">
           <h3 class="advantages__title">Красивая дорога</h3>
           <p>№4</p>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
 
-        <li class="advantages__item tourists-item">
+        <li class="tourists-item advantages__item">
           <h3 class="advantages__title">Мало туристов</h3>
           <p>№5</p>
           <p>Большинство едет в гранд каньон и толпится там</p>
