--- a/source/photo.html
+++ b/source/photo.html
@@ -10,7 +10,7 @@
 <body class="page__body">
   <header class="page-header">
     <a class="page-header__logo">
-      <img src="img/logo-sedona-mobile.svg">
+      <img src="img/logo-sedona-mobile.svg" alt="Логотип Седона">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
@@ -46,8 +46,8 @@
     <h1 class="visually-hidden">Фото и видео Седоны</h1>
 
     <section class="photo-album">
-      <div class="photo-album__cover">
-        <img src="img/text-sedona.svg">
+      <div class="photo-album__cover main-cover">
+        <img class="main-cover__inscription" src="img/text-sedona.svg" alt="Надпись Седона">
       </div>
       <div class="photo-album__text">
         <h2 class="photo-album__title">Фото и видео</h2>
@@ -59,7 +59,7 @@
     <section class="cards">
       <div class="card">
         <a href="img.jpg">
-          <img class="card__photo" src="img/photo-sunset-mobile@1x.jpg">
+          <img class="card__photo" src="img/photo-sunset-mobile@1x.jpg" alt="Закат в Седоне">
         </a>
         <h3 class="card__title">Неродные просторы</h3>
         <span class="card__author-name">Автор фото: Борис</span>
@@ -69,7 +69,7 @@
       </div>
       <div class="card">
         <a href="img.jpg">
-          <img class="card__photo" src="img/photo-cactus-mobile@1x.jpg">
+          <img class="card__photo" src="img/photo-cactus-mobile@1x.jpg" alt="Фото кактуса">
         </a>
         <h3 class="card__title">Местная растительность</h3>
         <span class="card__author-name">Автор фото: Сергей</span>
@@ -79,7 +79,7 @@
       </div>
       <div class="card">
         <a href="img.jpg">
-          <img class="card__photo" src="img/photo-roads-mobile@1x.jpg">
+          <img class="card__photo" src="img/photo-roads-mobile@1x.jpg" alt="Фото дорога">
         </a>
         <h3 class="card__title">Дорога на север</h3>
         <span class="card__author-name">Автор фото: Петр</span>
@@ -89,7 +89,7 @@
       </div>
       <div class="card">
         <a href="img.jpg">
-          <img class="card__photo" src="img/main-bridge-mobile@1x.jpg">
+          <img class="card__photo" src="img/main-bridge-mobile@1x.jpg" alt="Фото моста дьявола">
         </a>
         <h3 class="card__title">Мост дьявола</h3>
         <span class="card__author-name">Автор фото:Антон</span>
