--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 <body class="page__body">
   <header class="page-header">
     <a class="page-header__logo" href="index.html">
-      <img src="https://via.placeholder.com/125x130">
+      <img src="img/logo-sedona-mobile.svg" alt="Логотип Седона">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
@@ -46,8 +46,8 @@
     <h1 class="visually-hidden">Отзывы о посещении Седоны</h1>
 
     <section class="review-intro">
-      <div class="review-intro__cover">
-        <img src="https://via.placeholder.com/229x100">
+      <div class="review-intro__cover main-cover">
+        <img class="main-cover__inscription" src="img/text-sedona.svg" alt="Надпись Седона">
       </div>
       <div class="review-intro__text">
         <h2 class="visually-hidden">Оставьте свой отзыв</h2>
