Исправлены параметры шрифтов.

--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 <body class="page__body">
   <header class="page-header">
     <a class="page-header__logo">
-      <img src="img/logo-sedona-mobile.svg" alt="Логотип Седона">
+      <img src="img/logo-sedona-mobile.svg" width="102px" height="84px" alt="Логотип Седона">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
@@ -47,7 +47,8 @@
 
     <section class="intro">
       <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-      <img class="intro__img" src="img/text-sedona-index.svg" alt="Добро пожаловать в Седону">
+      <img class="intro__img" src="img/text-sedona-index.svg" width="282px" height="214px"
+        alt="Добро пожаловать в Седону">
     </section>
 
 
