--- a/source/photo.html
+++ b/source/photo.html
@@ -49,9 +49,9 @@
       <div class="photo-album__cover main-cover">
         <img class="main-cover__inscription" src="img/text-sedona.svg" alt="Надпись Седона">
       </div>
-      <div class="photo-album__text">
+      <div class="photo-album__description">
         <h2 class="photo-album__title">Фото и видео</h2>
-        <p>Не можете решиться на путешествие из-за курса?
+        <p class="photo-album__text">Не можете решиться на путешествие из-за курса?
           Фотографии помогут вам забыть о политике и экономике</p>
       </div>
     </section>
@@ -92,7 +92,7 @@
           <img class="card__photo" src="img/main-bridge-mobile@1x.jpg" alt="Фото моста дьявола">
         </a>
         <h3 class="card__title">Мост дьявола</h3>
-        <span class="card__author-name">Автор фото:Антон</span>
+        <span class="card__author-name">Автор фото: Антон</span>
         <div class="card__review">
           <p class="card__like-count">254</p>
         </div>
