--- a/source/form.html
+++ b/source/form.html
@@ -9,31 +9,31 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
+    <a class="page-header__logo">
       <img src="img/logo-sedona-mobile.svg" alt="Логотип Седона">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">ОТкрыть меню</span></button>
+        <span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a>
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link">
               Главная
             </a>
           </li>
           <li class="site-list__item">
-            <a href="#">
+            <a class="site-list__link" href="#">
               Фото и видео
             </a>
           </li>
-          <li class="site-list__item site-list__item--active">
-            <a href="#">
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">
               Форма отзыва
             </a>
           </li>
           <li class="site-list__item">
-            <a href="#">
+            <a class="site-list__link" href="#">
               Html academy
             </a>
           </li>
@@ -49,9 +49,9 @@
       <div class="review-intro__cover main-cover">
         <img class="main-cover__inscription" src="img/text-sedona.svg" alt="Надпись Седона">
       </div>
-      <div class="review-intro__text">
-        <h2 class="visually-hidden">Оставьте свой отзыв</h2>
-        <p>Помогите нашим отелям стать лучше!
+      <div class="review-intro__description">
+        <h2 class="review-intro__title">Оставьте свой отзыв</h2>
+        <p class="review-intro__text">Помогите нашим отелям стать лучше!
           Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       </div>
     </section>
@@ -121,22 +121,27 @@
     <div class="page-footer__social social">
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link social__link--twitter" href="#">
-            О Седоне в Твитер</a>
+          <a class="social__link social__link--twitter" href="#" aria-label="Иконка Twitter">
+            <img src="img/icon-twitter.svg">
+          </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--facebook" href="#">
-            О Седоне в Фейсбуке</a>
+          <a class="social__link social__link--facebook" href="#" aria-label="Седона в Facebook">
+            <img src="img/icon-facebook.svg">
+          </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--youtube" href="#">
-            О Седоне на Ютуб</a>
+          <a class="social__link social__link--youtube" href="#" aria-label="Седона на YouTube">
+            <img src="img/icon-youtube.svg">
+          </a>
         </li>
       </ul>
     </div>
     <div class="page-footer__copyright copyright">
-      <b class="copyright__text">Разработано:</b>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <p class="copyright__text">Разработано:</p>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg"
+          alt="Страница HTML Academy">
+      </a>
     </div>
   </footer>
 </body>
