Исправления верстки адаптивных сеток.

--- a/source/photo.html
+++ b/source/photo.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -59,7 +60,7 @@
     <section class="cards-section">
 
       <div class="card vast-card">
-        <a href="img.jpg">
+        <a href="img/photo-sunset-mobile@1x.jpg">
           <img class="card__photo" src="img/photo-sunset-mobile@1x.jpg" alt="Закат в Седоне">
         </a>
         <div class="vast-card__content">
@@ -74,7 +75,7 @@
       </div>
 
       <div class="card plants-card">
-        <a href="img.jpg">
+        <a href="img/photo-cactus-mobile@1x.jpg">
           <img class="card__photo" src="img/photo-cactus-mobile@1x.jpg" alt="Фото кактуса">
         </a>
         <div class="plants-card__content">
@@ -87,7 +88,7 @@
       </div>
 
       <div class="card road-card">
-        <a href="img.jpg">
+        <a href="img/photo-roads-mobile@1x.jpg">
           <img class="card__photo" src="img/photo-roads-mobile@1x.jpg" alt="Фото дорога">
         </a>
         <div class="road-card__content">
@@ -100,7 +101,7 @@
       </div>
 
       <div class="card bridge-card">
-        <a href="img.jpg">
+        <a href="img/main-bridge-mobile@1x.jpg">
           <img class="card__photo" src="img/main-bridge-mobile@1x.jpg" alt="Фото моста дьявола">
         </a>
         <div class="bridge-card__content">
