Изменения в верстке desktop версии главной страницы index.html.

--- a/source/index.html
+++ b/source/index.html
@@ -47,92 +47,112 @@
     <h1 class="visually-hidden">Почему стоит выбрать путешествие в Седону</h1>
 
     <section class="intro">
-      <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-      <img class="intro__img" src="img/text-sedona-index.svg" width="282px" height="214px"
-        alt="Добро пожаловать в Седону">
+      <div class="intro__section">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+        <img class="intro__img" src="img/text-sedona-index.svg" width="282px" height="214px"
+          alt="Добро пожаловать в Седону">
+      </div>
     </section>
 
 
     <section class="advantages">
       <h2 class="visually-hidden">Почему стоит выбрать Седону</h2>
-      <div class="inscription advantages__intro">
+      <div class="advantages__intro inscription">
         <p class="inscription__slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="inscription__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       </div>
-      <ul class="advantages__list">
-        <li class="advantages__item city-item">
-          <div class="city-item__section">
-            <div class="city-item__description">
-              <h3 class="city-item__title">Настоящий городок</h3>
-              <p>&ndash;№1&ndash;</p>
-              <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
-            </div>
-            <div class="city-item__photo-section">
-              <img class="city-item__photo" src="img/main-city-mobile@1x.jpg" alt="Изображение города">
-            </div>
-          </div>
-        </li>
-        <ul class="facilities city-item__facilities">
-          <li class="facilities__item">
-            <div class="facilities__section-first">
-              <h4 class="facilities__title">Жилье</h4>
-              <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-            </div>
-          </li>
-          <li class="facilities__item">
-            <div class="facilities__section-second">
-              <h4 class="facilities__title">Сувениры</h4>
-              <p>Не только китайского, но и местного производства!</p>
-            </div>
-          </li>
-          <li class="facilities__item">
-            <div class="facilities__section-third">
-              <h4 class="facilities__title">Еда</h4>
-              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      <div class="advantages__wrapper">
+        <ul class="advantages__list">
+
+          <li class="advantages__item city-item">
+
+            <div class="city-item__section">
+              <div class="city-item__description">
+                <h3 class="city-item__title">Настоящий<br> городок</h3>
+                <p>&ndash;№1&ndash;</p>
+                <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
+              </div>
+
+              <div class="city-item__city-photo">
+                <img class="city-item__photo" src="img/main-city-mobile@1x.jpg" alt="Изображение города">
+              </div>
             </div>
           </li>
 
+          <ul class="facilities city-item__facilities">
+
+            <li class="facilities__item-1">
+              <div class="facilities__section-first">
+                <h4 class="facilities__title">Жилье</h4>
+                <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </div>
+            </li>
+            <li class="facilities__item-2">
+
+              <div class="facilities__section-second">
+                <h4 class="facilities__title">Сувениры</h4>
+                <p>Не только китайского, но и местного производства!</p>
+              </div>
+            </li>
+
+            <li class="facilities__item-3">
+              <div class="facilities__section-third">
+                <h4 class="facilities__title">Еда</h4>
+                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </div>
+            </li>
+
+          </ul>
+
+          <li class="advantages__item bridge-item">
+            <div class="bridge-item__section">
+              <div class="bridge-item__description">
+                <h3 class="bridge-item__title">Там есть<br> мост дьявола</h3>
+                <p>&ndash;№2&ndash;</p>
+                <p>Да, по нему можно пройти, если вы осмелитесь, конечно </p>
+              </div>
+              <div class="city-item__bridge-photo">
+                <img class="bridge-item__photo" src="img/photo-bridge-mobile@1x.jpg" alt="Мост Дьявола">
+              </div>
+            </div>
+          </li>
+
+          <div class="advantages__section-cards">
+            <li class="advantages__item square-item">
+              <div class="square-item__section">
+                <h3 class="advantages__title">Небольшая <br> площадь</h3>
+                <p>&ndash;№3&ndash;</p>
+                <p>Все интересные места находятся очень близко </p>
+              </div>
+            </li>
+
+            <li class="advantages__item road-item">
+              <div class="road-item__section">
+                <h3 class="advantages__title">Красивая <br> дорога</h3>
+                <p>&ndash;№4&ndash;</p>
+                <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </div>
+            </li>
+
+            <li class="advantages__item tourists-item">
+              <div class="tourists-item__section">
+                <h3 class="advantages__title">Мало <br> туристов</h3>
+                <p>&ndash;№5&ndash;</p>
+                <p>Большинство едет в гранд каньон и толпится там</p>
+              </div>
+            </li>
+          </div>
         </ul>
-
-        <li class="advantages__item bridge-item">
-          <div class="bridge-item__section">
-            <div class="bridge-item__description">
-              <h3 class="bridge-item__title">Там есть мост дьявола</h3>
-              <p>&ndash;№2&ndash;</p>
-              <p>Да, по нему можно пройти, если вы осмелитесь, конечно </p>
-            </div>
-            <div class="city-item__photo-section">
-              <img class="bridge-item__photo" src="img/photo-bridge-mobile@1x.jpg" alt="Мост Дьявола">
-            </div>
-          </div>
-        </li>
-        <div class="advantages__section-cards">
-          <li class="advantages__item square-item">
-            <h3 class="advantages__title">Небольшая площадь</h3>
-            <p>&ndash;№3&ndash;</p>
-            <p>Все интересные места находятся очень близко </p>
-          </li>
-
-          <li class="advantages__item road-item">
-            <h3 class="advantages__title">Красивая дорога</h3>
-            <p>&ndash;№4&ndash;</p>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-
-          <li class="advantages__item tourists-item">
-            <h3 class="advantages__title">Мало туристов</h3>
-            <p>&ndash;№5&ndash;</p>
-            <p>Большинство едет в гранд каньон и толпится там</p>
-          </li>
-        </div>
-      </ul>
+      </div>
     </section>
 
     <section class="search-section">
-      <h2 class="visually-hidden">Бронирование гостиницы</h2>
-      <p class="search-section__subject">Заинтересовались?</p>
-      <p class="search-section__text">Укажите предполагаемые даты поездки, и мы покажем вам
-        лучшие предложения гостиниц в Cедоне</p>
+      <h2 class="visually-hidden">Поиск гостиницы</h2>
+      <div class="search-section__text">
+        <p class="search-section__subject">Заинтересовались?</p>
+        <p class="search-section__subtitle">Укажите предполагаемые даты поездки, и мы покажем вам
+          лучшие предложения гостиниц в Cедоне</p>
+      </div>
       <div class="search-section__button">
         <a class="search-section__link" href="#">Найти гостиницу</a>
       </div>
