--- a/source/photo.html
+++ b/source/photo.html
@@ -47,8 +47,9 @@
     <h1 class="visually-hidden">Фото и видео Седоны</h1>
 
     <section class="photo-video">
-      <div class="photo-video__cover main-cover">
-        <img class="main-cover__inscription" src="img/text-sedona.svg" alt="Надпись Седона">
+      <div class="photo-video__cover">
+        <img class="photo-video__inscription" src="img/text-sedona.svg" alt="Надпись Седона" width="100%"
+          height="160px">
       </div>
     </section>
 
@@ -63,72 +64,125 @@
 
         <!-- Секция неродные просторы -->
         <div class="cards-section__square vast-card">
-          <div class="vast-card__photo">
+          <div class="cards-section__photo vast-card__photo">
             <a href="img/photo-sunset-mobile@1x.jpg">
-              <img class="card-photo" src="img/photo-sunset-mobile@1x.jpg" alt="Закат в Седоне">
+              <img class="card-photo" src="img/photo-sunset-mobile@1x.jpg" alt="Закат в Седоне" width="280px"
+                height="280px">
             </a>
           </div>
-          <div class="vast-card__content">
-            <div class="vast-card__description">
+
+          <div class="cards-section__content vast-card__content">
+            <div class="cards-section__descriprion vast-card__description">
               <h3 class="vast-card__name card-title">Неродные просторы</h3>
               <span class="vast-card__author card-author-name">Автор фото: Борис</span>
             </div>
-            <div class="vast-card__review card-review">
-              <p class="like-count">1350</p>
+            <div class="cards-section__review vast-card__review">
+              <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
+                viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                <g id="Page-1">
+                  <g id="Core" transform="translate(-295.000000, -464.000000)">
+                    <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                      <path id="Shape" fill="#000000"
+                        d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
+                    </g>
+                  </g>
+                </g>
+              </svg>
+              <p class="cards-section__like-count">1350</p>
             </div>
           </div>
         </div>
 
         <!-- Секция местная растительность -->
         <div class="cards-section__square plants-card">
-          <div class="plants-card__photo">
+          <div class="cards-section__photo plants-card__photo">
             <a href="img/photo-cactus-mobile@1x.jpg">
-              <img class="card-photo" src="img/photo-cactus-mobile@1x.jpg" alt="Фото кактуса">
+              <img class="card-photo" src="img/photo-cactus-mobile@1x.jpg" alt="Фото кактуса" width="280px"
+                height="280px">
             </a>
           </div>
-          <div class="plants-card__content">
-            <div class="plants-card__description">
+          <div class="cards-section__content plants-card__content">
+            <div class="cards-section__descriprion plants-card__description">
               <h3 class="plants-card__name card-title">Местная растительность</h3>
               <span class="plants-card__author card-author-name">Автор фото: Сергей</span>
             </div>
-            <div class="plants-card__review card-review">
-              <p class="like-count">143</p>
+            <div class="cards-section__review plants-card__review card-review">
+              <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
+                viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                <g id="Page-1">
+                  <g id="Core" transform="translate(-295.000000, -464.000000)">
+                    <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                      <path id="Shape" fill="#000000"
+                        d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
+                    </g>
+                  </g>
+                </g>
+              </svg>
+              <p class="cards-section__like-count">143</p>
             </div>
           </div>
         </div>
 
         <!-- Секция дорога на север -->
         <div class="cards-section__square road-card">
-          <div class="road-card__photo">
+          <div class="cards-section__photo road-card__photo">
             <a href="img/photo-roads-mobile@1x.jpg">
-              <img class="card__photo" src="img/photo-roads-mobile@1x.jpg" alt="Фото дорога">
+              <img class="card__photo" src="img/photo-roads-mobile@1x.jpg" alt="Фото дорога" width="280px"
+                height="280px">
             </a>
           </div>
-          <div class="road-card__content">
+          <div class="cards-section__content road-card__content">
             <div class="road-card__description">
               <h3 class="road-card__name card-title">Дорога на север</h3>
               <span class="road-card__author card-author-name">Автор фото: Петр</span>
             </div>
-            <div class="road-card__review card-review">
-              <p class="like-count">96</p>
+            <div class="cards-section__review road-card__review">
+              <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
+                viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                <g id="Page-1">
+                  <g id="Core" transform="translate(-295.000000, -464.000000)">
+                    <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                      <path id="Shape" fill="#000000"
+                        d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
+                    </g>
+                  </g>
+                </g>
+              </svg>
+              <p class="cards-section__like-count">96</p>
             </div>
           </div>
         </div>
 
         <!-- Секция мост дьявола -->
         <div class="cards-section__square bridge-card">
-          <div class="bridge-card__photo">
+          <div class="cards-section__photo bridge-card__photo">
             <a href="img/main-bridge-mobile@1x.jpg">
-              <img class="card__photo" src="img/main-bridge-mobile@1x.jpg" alt="Фото моста дьявола">
+              <img class="card__photo" src="img/main-bridge-mobile@1x.jpg" alt="Фото моста дьявола" width="280px"
+                height="280px">
             </a>
           </div>
-          <div class="bridge-card__content">
+          <div class="cards-section__content bridge-card__content">
             <div class="bridge-card__description">
               <h3 class="bridge-card__name card-title">Мост дьявола</h3>
               <span class="bridge-card__author card-author-name">Автор фото: Антон</span>
             </div>
-            <div class="bridge-card__review card-review">
-              <p class="like-count">254</p>
+            <div class="cards-section__review bridge-card__review">
+              <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
+                viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                <g id="Page-1">
+                  <g id="Core" transform="translate(-295.000000, -464.000000)">
+                    <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                      <path id="Shape" fill="#000000"
+                        d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
+                    </g>
+                  </g>
+                </g>
+              </svg>
+              <p class="cards-section__like-count">254</p>
             </div>
           </div>
         </div>
@@ -136,10 +190,12 @@
     </section>
 
     <section class="intro-video">
-      <h2 class="visually-hidden">Промо-ролик</h2>
-      <p class="intro-video__title">Все еще сомневаетесь?</p>
-      <p class="intro-video__text">Смотрите видеопрезентацию и скорее за билетами,
-        пока они не подорожали в очередной раз!</p>
+      <div class="intro-video__promo">
+        <h2 class="visually-hidden">Промо-ролик</h2>
+        <p class="intro-video__title">Все еще сомневаетесь?</p>
+        <p class="intro-video__text">Смотрите видеопрезентацию и скорее за билетами,
+          пока они не подорожали в очередной раз!</p>
+      </div>
       <div class="intro-video__view">
         <img class="intro-video__view-back" src="../img/video-mobile@1x.jpg" alt="Видеопрезентация" width="320px"
           height="201px">
